Added JukeBox.locational-sounds (#18) + small fixes